samples/_failures_safe/1761369869_57c311_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fbf4581.c: In function ‘process_log_file’:
./samples/SAFE/__tmp_2fbf4581.c:133: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2fbf4581.c:132:9: error: expected declaration or statement at end of input
  132 |         if
      |         ^~
./samples/SAFE/__tmp_2fbf4581.c:132:9: error: expected declaration or statement at end of input
